<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetNext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/create_note"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:hint="@string/title"
        android:gravity="center|start"
        android:paddingStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        tools:ignore="RtlSymmetry"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notes_layout"
        style="@style/CustomTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:counterEnabled="true"
        app:counterMaxLength="255"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:maxLength="255"
            android:gravity="top|left"
            android:hint="Notes Description"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="6dp"
        app:backgroundTint="@color/black"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintEnd_toEndOf="@+id/notes_layout"
        app:layout_constraintStart_toStartOf="@+id/notes_layout"
        app:layout_constraintTop_toBottomOf="@+id/notes_layout" />

    <ProgressBar
        android:id="@+id/progressLoading"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom_space"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/done" />

</androidx.constraintlayout.widget.ConstraintLayout>